# amplifier-bundle-issues

./: .gitignore  README.md  amplifier-bundle.code-workspace  bundle.md
agents/: issue-tracking.md
behaviors/: issues.yaml
commands/: issues-clear.md  issues-list.md
context/: issues-instructions.md
examples/: test-queries.md
modules/hook-issue-auto-work/amplifier_module_hook_issue_auto_work/: __init__.py
modules/hook-issue-session-end/: README.md  pyproject.toml
modules/hook-issue-session-end/amplifier_module_hook_issue_session_end/: __init__.py
modules/hook-issue-session-start/: pyproject.toml
modules/hook-issue-session-start/amplifier_module_hook_issue_session_start/: __init__.py
modules/issue-manager/: pyproject.toml
modules/issue-manager/amplifier_module_issue_manager/: __init__.py  algorithms.py  manager.py  models.py
modules/issue-manager/tests/: test_session_linking.py
modules/tool-issue/: .gitignore  pyproject.toml
modules/tool-issue/amplifier_module_tool_issue/: __init__.py  tool.py
modules/tool-issue/tests/: README.md  __init__.py  conftest.py  test_github_permissions.py  test_github_sync.py
recipes/: issue-queue.yaml  simple-issue-loop.yaml
scripts/: setup-github-labels.sh
