[project]
name = "amplifier-module-hook-issue-session-end"
version = "1.0.0"
description = "Hook that marks issues when Amplifier sessions end for session linking"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
    "amplifier-module-issue-manager",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hook_issue_session_end"]
