[project]
name = "amplifier-module-hook-issue-session-start"
version = "0.1.0"
description = "Hook that surfaces existing issues at session start and provides gentle reminders"
requires-python = ">=3.11"
dependencies = ["amplifier-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hook_issue_session_start"]
